fix: update image positioning and adjust z-index of H1 title and header

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -36,6 +36,7 @@
   font-weight: 500;
   font-size: 4.5rem;
   line-height: 1.13;
+  z-index: 3;
 
   @media screen and (max-width: 1500px) {
     font-size: 3.75rem;
@@ -230,7 +231,7 @@
 
   @media screen and (max-width: 768px) {
     top: auto;
-    bottom: 40%;
+    bottom: 55%;
     width: 70px;
   }
 }
