--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,6 +2,7 @@
   width: 100%;
   z-index: 1;
   background-color: $body-bg;
+  z-index: 10;
 }
 
 .header--sticky {
